# checksec.py

./: .gitignore  .gitmodules  README.md  checksec.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/actions/common-setup/: action.yml
.github/workflows/: build.yml  ci.yml  lint.yml  test.yaml
checksec/: __main__.py  binary.py  elf.py  errors.py  output.py  pe.py  utils.py
tests/: conftest.py  main.c  test_elf.py
tests/e2e/: test_e2e_elf.py  test_e2e_pe.py
